# ff7-terraform

./: .gitignore  README.md  compiler.py  constants.py  extrator.py  main_ui.py  parse.py  parser.py  pyproject.toml  setup.py  terraform.py  test_compiler.py  utils.py  world_script.lark
PyFF7/: __init__.py  lgp.py  text.py
