[tool.poetry]
name = "terraform"
version = "1.0.0"
description = ""
authors = ["Maciej Trębacz <maciej@trebacz.org>"]

[tool.poetry.dependencies]
python = "^3.7"
lark-parser = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
